# RecyBot-Autonomous-Waste-Sorting-using-Franka-Emika-Panda-with-YOLOv8-and-LLM-Reasoning

./: README.md
llm_robot_interface/: package.xml  setup.cfg  setup.py
llm_robot_interface/launch/: brain.launch.py
llm_robot_interface/llm_robot_interface/: __init__.py  action_executor.py  chat_terminal.py  llm_interface_node.py
panda_bringup/launch/: pick_and_place.launch.py  pick_and_place2.launch.py
panda_controller/: package.xml
panda_controller/panda_controller/: slider_controller.py
panda_description/launch/: gazebo.launch.py  gazebo2.launch.py
panda_description/models/Coke/: model.sdf
panda_description/models/Twinlab_Premium_Creatine_Fuel_Powder/: metadata.pbtxt  model.config  model.sdf
panda_description/models/can_lay/: model.config  model.sdf
panda_description/models/glass_bottle/: model.config  model.sdf
panda_description/models/glass_bottle_lay/: model.config  model.sdf
panda_description/models/plastic_bottle/: model.config  model.sdf
panda_description/models/plastic_bottle_lay/: model.config  model.sdf
panda_description/models/recycle_bin_glass/: model.config  model.sdf
panda_description/models/small_box/: model.sdf
panda_description/urdf/: sensors.xacro
panda_description/worlds/: empty.world  empty2.world  empty3.world
panda_moveit/config/: panda.srdf
panda_moveit/launch/: moveit.launch.py
pymoveit2/: CMakeLists.txt
pymoveit2/examples/: pick_and_place.py  pick_and_place2.py  pick_and_place3.py  sort_glass.py  sort_metals.py  sort_plastics.py
yolobot_recognition/scripts/: yolov8_ros2_pt.py  yolov8_ros2_subscriber.py
(+15 files in other folders)
